--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -16,6 +16,12 @@
   --bs-link-hover-color: #9ec5fe;
 }
 
+html {
+  background-color: var(--bs-body-bg) !important;
+  color: var(--bs-body-color) !important;
+  min-height: 100vh;
+}
+
 body {
   background-color: var(--bs-body-bg) !important;
   color: var(--bs-body-color) !important;
